# KTP-Hackathon

./: .gitignore  Dockerfile  README.md  app.py  cli.py  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
data/: ground_truth.json  sample_inspections.xlsx
data/synthetic/: ground_truth.json  msg_0001.txt  msg_0002.txt  msg_0003.txt  msg_0004.txt  msg_0005.txt  msg_0006.txt  msg_0007.txt  msg_0008.txt  msg_0009.txt  msg_0010.txt  msg_0011.txt  msg_0012.txt  msg_0013.txt  msg_0014.txt  msg_0015.txt  msg_0016.txt  msg_0017.txt  msg_0018.txt  msg_0019.txt  msg_0020.txt  msg_0021.txt  msg_0022.txt  msg_0023.txt  msg_0024.txt  msg_0025.txt  msg_0026.txt  msg_0027.txt  msg_0028.txt  msg_0029.txt  msg_0030.txt  msg_0031.txt  msg_0032.txt  msg_0033.txt  msg_0034.txt  msg_0035.txt  msg_0036.txt  msg_0037.txt  msg_0038.txt  msg_0039.txt  (+461 more)
eval/: edge_cases.json  report.json  report.md
schemas/: smartroute_record.schema.json
src/smartroute/: __init__.py  cleaning.py  models.py  normalize.py  pipeline.py  routing.py
src/smartroute/extractors/: __init__.py  llm_extractor.py  regex_extractor.py
templates/: index.html
tests/: __init__.py  edge_cases.py  test_cleaning.py  test_pipeline_smoke.py  test_regex.py
tools/: eval.py  generate_synthetic.py  xlsx_to_ground_truth.py
